<resources>
    <string name="app_name">OfficeSLIP</string>
    <string name="login_user_id">ID</string>
    <string name="login_user_pw">Password</string>
    <string name="login_user_id_hint">아이디를 입력하세요.</string>
    <string name="login_user_pw_hint">비밀번호를 입력하세요.</string>
    <string name="login_btn_login">Login</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_confirm">확인</string>
    <string name="login_toggle_autologin">자동 로그인</string>
    <string name="login_alert_failed_title">로그인 실패</string>
    <string name="alert_network_disabled_message">네트워크에 연결되지 않았습니다. 네트워크 상태를 확인하세요.\n(옵션에서 모바일 네크워크 사용 설정 가능.)</string>
    <string name="login_alert_no_user_exists">유저 정보가 존재하지 않습니다.</string>
    <string name="main_tab_add_slip">증빙 등록</string>
    <string name="main_tab_search_slip">증빙 조회</string>
    <string name="main_tab_search_addfile">첨부파일 조회</string>
    <string name="main_tab_add_file">첨부 등록</string>
    <string name="main_tab_slip_statistics">증빙 통계</string>
    <string name="main_tab_setting">설정</string>
    <string name="changepassword_new_title">암호 등록</string>
    <string name="changepassword_change_title">암호 변경</string>
    <string name="changepassword_verify_title">암호 확인</string>
    <string name="changepassword_sub_verify">Enter your passcode.</string>
    <string name="changepassword_sub_new">Enter your new passcode.</string>
    <string name="changepassword_sub_again">Enter new passcode again.</string>
    <string name="changepassword_contents_incorrect">암호가 일치하지 않습니다. 다시 시도해주세요.</string>
    <string name="logout_alert_title">로그아웃</string>
    <string name="logout_alert_contents">로그아웃 하시겠습니까?</string>
    <string name="failed_send_title">전송 실패</string>
    <string name="title_send_log">문제보고서 전송</string>
    <string name="failed_send_log_contents">문제보고서 전송에 실패했습니다. 관리자에게 문의하세요.</string>
    <string name="confirm_send_log_contents">문제보고서를 전송하시겠습니까?</string>
    <string name="success_send_log_contents">문제보고서를 전송했습니다.\n보고서 ID = <u><b>%1$s</b></u></string>
    <string name="no_log_exists">전송할 문제보고서가 없습니다.</string>
    <string name="send_progress_contents">(%1$d/%2$d)</string>
    <string name="send_log_progress_contents_default">계산중..</string>
    <string name="in_progress">처리중..</string>
    <string name="title_sdoctype_activity">증빙 유형</string>
    <string name="get_sdoctype_failed">증빙 유형 로드에 실패했습니다.</string>
    <string name="get_searchslip_failed">증빙 조회에 실패했습니다.</string>
    <string name="get_searchaddfile_failed">첨부파일 조회에 실패했습니다.</string>
    <string name="get_searchstatistics_failed">증빙통계 조회에 실패했습니다.</string>
    <string name="select_sdoctype_item">증빙 유형을 선택하세요.</string>
    <string name="segment_image">Image</string>
    <string name="segment_file">File</string>
    <string name="slip">증빙</string>
    <string name="dialog_uploaditem_camera">Camera</string>
    <string name="dialog_uploaditem_gallery">Photo Library</string>
    <string name="dialog_uploaditem_file">File</string>
    <string name="dialog_uploaditem_cloud">Cloud</string>
    <string name="dialog_uploaditem_searchadd">조회하여 추가</string>
    <string name="dialog_uploaditem_title">증빙 등록</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="error">에러</string>
    <string name="error_failed_load_image_from_gallery">이미지 불러오기에 실패했습니다.</string>
    <string name="menu_submit">전송</string>
    <string name="invalid_input_entry">입력 정보가 올바르지 않습니다.</string>
    <string name="confirm_submit_slip">증빙을 전송하시겠습니까?</string>
    <string name="verify_enter_sdocname">증빙 명을 입력하세요.</string>
    <string name="verify_select_sdoctype">증빙 종류를 선택하세요.</string>
    <string name="verify_select_slpiitem">증빙 이미지나 파일을 첨부하세요.</string>
    <string name="progress_upload_original">원본 이미지 등록중..</string>
    <string name="upload_failed_upload_slip">원본 이미지 등록에 실패했습니다.</string>
    <string name="progress_upload_thumb">썸네일 이미지 등록중..</string>
    <string name="upload_failed_upload_thumb">썸네일 이미지 등록에 실패했습니다.</string>
    <string name="progress_upload_slipdoc">증빙서 등록중..</string>
    <string name="progress_upload_addfile">첨부파일 등록중..</string>
    <string name="upload_failed_upload_slipdoc">증빙서 등록에 실패했습니다.</string>
    <string name="upload_failed_upload_addfile">첨부파일 등록에 실패했습니다.</string>
    <string name="date_format_yyyymmdd">%1$s년 %2$s월 %3$s일</string>
    <string name="error_failed_get_search_option">검색 조건이 정의되지 않았습니다.</string>
    <string name="sdoctype_all"> - 전체 - </string>
    <string name="sliplist_sdoctype">증빙종류 : </string>
    <string name="sliplist_regtime">등록일자 : </string>
    <string name="sliplist_jdocno">전표번호 : </string>
    <string name="sliplist_partname">등록부서 : </string>
    <string name="sliplist_reguser">등록자 : </string>
    <string name="failed_load_slip_data">증빙 데이터 불러오기에 실패했습니다.</string>
    <string name="failed_load_thumb">썸네일 불러오기에 실패했습니다.</string>
    <string name="btn_swipe_remove">삭제</string>
    <string name="btn_swipe_move">이동</string>
    <string name="btn_swipe_copy">전달</string>
    <string name="confirm_remove_slip">해당 증빙을 삭제하시겠습니까?</string>
    <string name="failed_remove_slip">증빙 삭제에 실패했습니다.</string>
    <string name="btn_edit">편집</string>
    <string name="upload_success_slip">증빙을 등록했습니다.</string>
    <string name="btn_remove">삭제</string>
    <string name="failed_load_image">이미지 불러오기에 실패했습니다.</string>
    <string name="confirm_remove_addfile">해당 첨부파일을 삭제하시겠습니까?</string>
    <string name="failed_remove_addfile">첨부파일 삭제에 실패했습니다.</string>
    <string name="addfilelist_extension">확장자 : </string>
    <string name="addfilelist_size">Size : </string>
    <string name="addfilelist_part">등록부서 : </string>
    <string name="failed_download_file">파일 다운로드에 실패했습니다.</string>
    <string name="sdoc_step_0">초기</string>
    <string name="sdoc_step_1">초기</string>
    <string name="sdoc_step_2">연결</string>
    <string name="sdoc_step_3">상신</string>
    <string name="sdoc_step_4">완료</string>
    <string name="sdoc_step_7">반려</string>
    <string name="sdoc_step_9">삭제</string>
    <string name="title_file_select">파일 선택</string>
    <string name="file_explorer_internal_storage">내부 저장소</string>
    <string name="error_no_camera_feature">카메라가 장착되지 않은 디바이스입니다..</string>
    <string name="failed_update_userinfo">유저 정보 갱신에 실패했습니다.</string>
    <string name="updating_userinfo">유저정보 갱신 중..</string>
    <string name="confirm_copy_slip">해당 증빙을 전달하시겠습니까?</string>
    <string name="confirm_move_slip">해당 증빙을 이동하시겠습니까?</string>
    <string name="confirm_copy_addfile">해당 첨부파일을 전달하시겠습니까?</string>
    <string name="confirm_move_addfile">해당 첨부파일을 이동하시겠습니까?</string>
    <string name="title_searchuser_activity">사용자 조회</string>
    <string name="get_user_list_failed">사용자 리스트 로드에 실패했습니다.</string>
    <string name="hint_get_user_list">사번 or 이름을 입력하세요.</string>
    <string name="input_search_text">검색어를 입력하세요.</string>
    <string name="select_user_item">유저를 선택하세요.</string>
    <string name="in_progress_move_slip">증빙 이동중..</string>
    <string name="in_progress_copy_slip">증빙 전달중..</string>
    <string name="in_progress_move_attach">첨부파일 이동중..</string>
    <string name="in_progress_copy_attach">첨부파일 전달중..</string>
    <string name="move_cannot_process_not_init">\'초기\' 이외의 증빙에서는 이동할 수 없습니다.</string>
    <string name="copy_cannot_process_not_init">\'초기\' 이외의 증빙에서는 전달할 수 없습니다.</string>
    <string name="remove_favorite">즐겨찾기 삭제</string>
    <string name="failed_move_slip">증빙 이동에 실패했습니다.</string>
    <string name="failed_copy_slip">증빙 전달에 실패했습니다.</string>
    <string name="success_move_slip">증빙 이동에 성공했습니다.</string>
    <string name="success_copy_slip">증빙 전달에 성공했습니다.</string>
    <string name="failed_move_attach">첨부파일 이동에 실패했습니다.</string>
    <string name="failed_copy_attach">첨부파일 전달에 실패했습니다.</string>
    <string name="success_move_attach">첨부파일 이동에 성공했습니다.</string>
    <string name="success_copy_attach">첨부파일 전달에 성공했습니다.</string>
    <string name="download_new_version">전자증빙 Version이 변경되었습니다.\n\n전자증빙을 설치합니다.</string>
    <string name="failed_application_udate">어플리케이션 업데이트 확인에 실패했습니다.</string>
    <string name="checking_application_update">업데이트 확인중..</string>
    <string name="downloading_application">업데이트 다운로드 중..</string>
    <string name="update_userinfo">유저정보 업데이트 중..</string>
    <string name="apply">적용</string>
    <string name="rotate_cw">우로 90도 회전</string>
    <string name="rotate_ccw">좌로 90도 회전</string>
    <string name="rotate_180">180도 회전</string>
    <string name="setting">설정</string>
    <string name="modify">수정</string>
    <string name="remove">삭제</string>
    <string name="failed_load_data">데이터 불러오기에 실패했습니다.</string>
    <string name="failed_save_property">변경 내용 저장에 실패했습니다.</string>
    <string name="new_memo">새 메모</string>
    <string name="confirm_delete_cache">캐시 데이터를 지우시겠습니까?</string>
    <string name="failed_update_data">데이터 업로드에 실패했습니다.</string>
    <string name="developer">(주)우남소프트</string>
    <string name="select_dev">DEV</string>
    <string name="select_prd">PRD</string>
    <string name="input_pw">비밀번호를 입력하세요.</string>
    <string name="title_select_server">서버 선택</string>
    <string name="alert_password_not_matched">비밀번호가 일치하지 않습니다.</string>
    <string name="only_init_slip_allowed">초기단계만 삭제 가능합니다.</string>
    <string name="main_tab_slip">전자증빙</string>
    <string name="main_tab_dashboard">홈</string>
    <string name="main_tab_approval">전자전표</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>

