<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorLoginBG">
    <ScrollView
        android:id="@+id/view_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px"
                tools:ignore="MissingConstraints" />
            <ImageView
                android:id="@+id/view_imageLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cropToPadding="false"
                android:src="@drawable/login_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/view_titleTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_imageLogo"
                android:layout_marginTop="40dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="e-Evidence System"/>

            <TextView
                android:id="@+id/view_textServerMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_titleTwo"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:visibility="gone"
                android:text="@string/select_dev"/>


            <TextView
                app:layout_goneMarginTop="20dp"
                android:layout_marginTop="4dp"
                android:id="@+id/view_textUserID"
                android:layout_width="220dp"
                android:layout_height="17dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_textServerMode"
                android:text="@string/login_user_id"
                android:textSize="14sp"
                android:textColor="@color/white"
                />
            <EditText
                android:layout_marginTop="4dp"
                android:id="@+id/view_editTextUserID"
                android:layout_width="220dp"
                android:layout_height="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_textUserID"
                android:textColor="@color/colorBlack"
                android:background="@drawable/login_edittext_border"
                android:textSize="14sp"
                android:maxLines="1"
                android:minLines="1"
                android:inputType="text"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:hint="@string/login_user_id_hint"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/view_textUserPW"
                android:layout_width="220dp"
                android:layout_height="17dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_editTextUserID"
                android:text="@string/login_user_pw"
                android:textSize="14sp"
                android:textColor="@color/white"
                />
            <EditText
                android:layout_marginTop="4dp"
                android:id="@+id/view_editTextUserPW"
                android:layout_width="220dp"
                android:layout_height="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_textUserPW"
                android:textColor="@color/colorBlack"
                android:background="@drawable/login_edittext_border"
                android:textSize="14sp"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:inputType="textPassword"
                android:hint="@string/login_user_pw_hint"
                />

            <Button
                android:layout_marginTop="16dp"
                android:id="@+id/view_btnLogin"
                android:layout_width="220dp"
                android:layout_height="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_editTextUserPW"
                android:text="@string/login_btn_login"
                android:background="@color/colorLoginBtnBG"
                android:textColor="@drawable/btn_login"
                style="?android:attr/borderlessButtonStyle"

                />
            <LinearLayout
                app:layout_goneMarginTop="10dp"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view_btnLogin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="4dp"
                >

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/view_switchAutoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/login_toggle_autologin"
                    android:textColor="@color/colorLoginEditText"
                    />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
