<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="95dp"
    android:background="@drawable/row_search_result"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <com.daimajia.swipe.SwipeLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        swipe:leftEdgeSwipeOffset="0dp"
        swipe:rightEdgeSwipeOffset="0dp"
        >
        <LinearLayout
            android:layout_width="240dp"
            android:weightSum="3"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/view_btnCopyAttach"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorSlipCopy"
                android:text="@string/btn_swipe_copy"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center"
                android:tag="COPY_ATTACH"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/view_btnMoveAttach"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorSlipMove"
                android:text="@string/btn_swipe_move"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:tag="MOVE_ATTACH"
                />

            <Button
                android:id="@+id/view_btnRemoveAttach"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorRemove"
                android:text="@string/btn_swipe_remove"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:tag="REMOVE_ATTACH"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/view_layout"
            android:tag="DOWN_ATTACH"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:layout_height="match_parent">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                >
            <TextView
                android:id="@+id/view_textAttachName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text=""
                android:textColor="@color/colorSearchResultTitle"
                />
            <TextView
                android:id="@+id/view_textAddStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view_textAttachName"
                android:layout_marginTop="10dp"
                android:text=""
                app:layout_constraintLeft_toLeftOf="@+id/view_textAttachCnt"
                app:layout_constraintRight_toRightOf="@+id/view_textAttachCnt"
                android:textSize="10sp"
                />
            <TextView
                android:id="@+id/view_textAttachCnt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text=""
                android:textColor="#000"
                android:background="@drawable/bg_circle"
                android:textSize="12sp"
                android:visibility="invisible"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/view_textTitleExtension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view_textAttachName"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/sliplist_top_row_1"
                android:layout_marginStart="@dimen/sliplist_left_row_1"
                android:text="@string/addfilelist_extension"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/view_textExtension"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/view_textTitleExtension"
                app:layout_constraintLeft_toRightOf="@+id/view_textTitleExtension"
                android:layout_marginStart="4dp"
                android:text=""
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/view_textTitleSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view_textTitleExtension"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/sliplist_top_row_1"
                android:layout_marginStart="@dimen/sliplist_left_row_1"
                android:text="@string/addfilelist_size"
                android:textSize="12sp"
                />

            <TextView
                android:id="@+id/view_textSize"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/view_textTitleSize"
                app:layout_constraintLeft_toRightOf="@+id/view_textTitleSize"
                android:layout_marginStart="4dp"
                android:text=""
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/view_textTitlePartName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view_textAttachName"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/sliplist_top_row_1"
                android:layout_marginStart="@dimen/sliplist_left_row_2"
                android:text="@string/sliplist_partname"
                android:textSize="12sp"
                />

            <TextView
                android:id="@+id/view_textPartName"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/view_textTitlePartName"
                app:layout_constraintLeft_toRightOf="@+id/view_textTitlePartName"
                android:layout_marginStart="4dp"
                android:text=""
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/view_textTitleRegUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view_textTitlePartName"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/sliplist_top_row_1"
                android:layout_marginStart="@dimen/sliplist_left_row_2"
                android:text="@string/sliplist_reguser"
                android:textSize="12sp"
                />

            <TextView
                android:id="@+id/view_textRegUserName"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/view_textTitleRegUserName"
                app:layout_constraintLeft_toRightOf="@+id/view_textTitleRegUserName"
                android:text=""
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                />

            <ImageView
                android:id="@+id/view_btnShow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/arrow"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </com.daimajia.swipe.SwipeLayout>
</android.support.constraint.ConstraintLayout>